<resources>
    <string name="app_name">VariosRecursos</string>

    <string name="tvVersionAndroidLB">1. Version Android</string>
    <string name="tvVersionAndroid"></string>
    <string name="tvLigth">2. Flashligth</string>
    <string name="btnOn">On</string>
    <string name="btnOff">Off</string>
    <string name="tvLevelBattery">3. Level of Battery</string>
    <string name="tvLevelBattery_2"></string>
    <string name="tvStorage">4. Storage</string>
    <string name="etNameFile">Name of File</string>
    <string name="btnSaveFile">Save</string>
    <string name="tvState">5. Conection:</string>
    <string name="tvBluetooth">6. Bluetooth:</string>
    <string name="btnBlueOn">On</string>
    <string name="btnBlueOff">Off</string>

</resources>